; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_and_32_er_ai.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_and_32_er_ai.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@CFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_and_32_er_ai() #0 {
  %1 = call i32 (...) @OPER_AY_AI_32()
  %2 = load i32, i32* @DX, align 4
  %3 = and i32 %2, %1
  store i32 %3, i32* @DX, align 4
  store i32 %3, i32* @FLAG_Z, align 4
  %4 = load i32, i32* @FLAG_Z, align 4
  %5 = call i32 @NFLAG_32(i32 %4)
  store i32 %5, i32* @FLAG_N, align 4
  %6 = load i32, i32* @CFLAG_CLEAR, align 4
  store i32 %6, i32* @FLAG_C, align 4
  %7 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %7, i32* @FLAG_V, align 4
  ret void
}

declare dso_local i32 @OPER_AY_AI_32(...) #1

declare dso_local i32 @NFLAG_32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
